test/link/assert.out
warning: assert.asm(7): Worry about me, but not too much.
error: assert.asm(8): Okay, this is getting serious!
FATAL: assert.asm(9): It all ends now.
Linking aborted after 2 errors
